E_CLASSROOM-200 [Bugfix] Dashboard table is overlapping (#56)
* E_CLASSROOM-200 [Bugfix] Dashboard table is overlapping

Fix lint

E_CLASSROOM-200 [Bugfix] Dashboard table is overlapping

fix conflict

* E_CLASSROOM-200 [Bugfix] Dashboard table is overlapping

--- a/src/pages/student/main/Dashboard/components/FriendsActivities/index.module.css
+++ b/src/pages/student/main/Dashboard/components/FriendsActivities/index.module.css
@@ -3,26 +3,24 @@
   justify-content: space-between;
 }
 
-.forContainerBar2 {
-  position: relative;
-  z-index: 1;
-  background-color: #e0eaec;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-  width: 730px;
-  height: 47px;
-  color: #48535b;
+.forContainerBar2{
+    position: relative;
+    z-index: 1;
+    background-color: #E0EAEC;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    height: 47px;
+    color: #48535B;
 }
 
-.forContent_box {
-  height: 366px;
-  width: 700.5px;
-  background-color: #ffffff;
+.forContent_box{
+    height: 366px;
+    background-color: #FFFFFF;
 }
 
-.titleText {
-  display: inline-block;
-  font-weight: 500;
-  font-size: 18px;
+.titleText{
+    display: inline-block;
+    font-weight: 500;
+    font-size: 18px;
 }
 
 .forScroll {
@@ -48,8 +46,4 @@
   margin: 0px 17px 5px 0px;
   width: 20px;
   height: 20px;
-}
-
-.noFriendActivitesMessage {
-  margin-top: 165px;
 }
