--- a/src/pages/student/main/Dashboard/index.module.css
+++ b/src/pages/student/main/Dashboard/index.module.css
@@ -1,11 +1,12 @@
 .bg {
     display: flex;
     column-gap: 75px;
+    margin-bottom: 33px;
 }
 
 .bg2 {
     display: flex;
-    justify-content: space-between;
+    column-gap: 48px;
 }
 
 .h2_style {
@@ -18,19 +19,23 @@
     z-index: 1;
     background-color: #e0eaec;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
-    width: 730px;
     height: 47px;
     color: #48535b;
 }
 
 .titleText {
     display: inline-block;
+    text-align: right;
     font-weight: 500;
     font-size: 18px;
 }
 
-.btnView {
-    margin-left: 456px;
+.headText{
+    display: table-cell;
+    text-align: right;
+}
+
+.btnView{
     border: none;
     width: 80px;
     height: 32px;
@@ -38,12 +43,12 @@
     background-color: #c0d5d8;
     font-size: 14px;
     line-height: 16px;
+    align-items: right;
 }
 
 .forContent_box {
     height: 366px;
-    width: 700.5px;
-    background-color: #ffffff;
+    background-color: #FFFFFF;
 }
 
 .forScroll {
